--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "core-js": "^2.4.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.2"
+    "zone.js": "^0.7.2",
+    "angular2-flash-messages": "^1.0.5",
+    "angularfire2": "^2.0.0-beta.8",
+    "firebase": "^3.6.10"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^2.3.1",
